Add list all functionality
